assets/style.css
/* GENERAL STYLE */
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: system-ui, sans-serif;
}
/* MY STYLE */
.logo{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 2rem 0;
    gap: 1rem;
}
.container{
    max-width: 900px;
    height: 500px;
    margin-inline: auto;
    border: 5px solid black;
}
.search{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: .5rem;
    margin: 2rem 0;
}
li{
    list-style: none;
    background-color: grey;
    padding: 1rem 0.5rem;
    display: flex;
    justify-content: space-between;
}
.fa-solid{
    cursor: pointer;
}

